Project's structure reorganization

--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>ihm.home.Main</Main-Class>
+                                        <Main-Class>controllers.home.Main</Main-Class>
                                         <Implementation-Version>${project.version}</Implementation-Version>
                                     </manifestEntries>
                                 </transformer>
