Maven configuration updating (Font Awesome repository adding)

--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,11 @@
             </exclusions>
         </dependency>
 
+        <!-- GUI -->
         <dependency>
-            <groupId>org.controlsfx</groupId>
-            <artifactId>controlsfx</artifactId>
-            <version>8.40.14</version>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx-commons</artifactId>
+            <version>9.1.2</version>
         </dependency>
 
         <!-- Logging -->
