--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,13 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <sqlite.version>3.28.0</sqlite.version>
+        <junit.version>4.12</junit.version>
+        <javaee-api.version>8.0.1</javaee-api.version>
+        <font-awesome.version>9.1.2</font-awesome.version>
+        <log4j.version>2.12.0</log4j.version>
     </properties>
 
     <dependencies>
@@ -20,14 +25,14 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.28.0</version>
+            <version>${sqlite.version}</version>
         </dependency>
 
         <!-- Tests -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -35,7 +40,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>8.0.1</version>
+            <version>${javaee-api.version}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -49,19 +54,19 @@
         <dependency>
             <groupId>de.jensd</groupId>
             <artifactId>fontawesomefx-commons</artifactId>
-            <version>9.1.2</version>
+            <version>${font-awesome.version}</version>
         </dependency>
 
         <!-- Logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.12.0</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.12.0</version>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
@@ -72,8 +77,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
@@ -107,7 +112,12 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>controllers.common.Home</Main-Class>
-                                        <Implementation-Version>${project.version}</Implementation-Version>
+                                        <Application-Version>${project.version}</Application-Version>
+                                        <SQLite-Version>${sqlite.version}</SQLite-Version>
+                                        <JUnit-Version>${junit.version}</JUnit-Version>
+                                        <JavaEE-API-Version>${javaee-api.version}</JavaEE-API-Version>
+                                        <FontAwesome-Version>${font-awesome.version}</FontAwesome-Version>
+                                        <Log4j-Version>${log4j.version}</Log4j-Version>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
